--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,20 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi",
     "uvicorn",
-    "pydantic"
+    "pydantic",
+    "pyngrok",
+    "starlette",
+    "authlib",
+    "itsdangerous",
+    "python-dotenv"
 ]
 
 [tool.uv]
 # This section is for uv specific settings if you need them later
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/legendary_potato"]
